Add -L option to capture to print out how long it has been since last output.
We currently put out a time stamp when we detect output after being idle for
a long time. But the time stamp is the time at which we started getting output
again, so it doesn't give us any idea how long it was idle (i.e., when the
last previous output happened).

So -L changes the format of the stamp from "STAMP{ctime-string}" to
"STAMP{idle@ctime-string}", where "idle" is the number of seconds it has been
since the last output.

--- a/capture/capture.1
+++ b/capture/capture.1
@@ -1,6 +1,6 @@
 .\"
 .\" EMULAB-COPYRIGHT
-.\" Copyright (c) 2000 University of Utah and the Flux Group.
+.\" Copyright (c) 2000, 2012 University of Utah and the Flux Group.
 .\" All rights reserved.
 .\"
 
@@ -14,6 +14,7 @@
 .Nm capture
 .Op Fl s Ar speed
 .Op Fl H
+.Op Fl T Ar seconds
 .Ar remote-name
 .Ar dev-name
 .Sh DESCRIPTION
@@ -29,6 +30,16 @@ The options are as follows:
 Set the speed in bps (2400, 9600, 115200, etc)
 .It Fl H
 Use hardware flow control
+.It Fl T Ar sinterval
+If more than
+.Ar sinterval
+seconds have elapsed since the
+last output to the device, put out a timestamp of the form "STAMP{time}"
+reflecting the current time.
+If
+.Fl L
+is also specified, then the stamp will be of the form "STAMP{delta@time}"
+where delta reflects the actual number of seconds since the last output.
 .Sh CONFIGURATION
 You should run one copy of
 .Nm capture
